syntax = "proto3";

package talk_cloud;

import "talk_cloud_model.proto";
//import "annotations.proto";

service TalkCloudLocation {
    // 上报设备数据
    rpc ReportGPSData (ReportDataReq) returns (ReportDataResp) {
    };

    // 返回gps数据
    rpc GetGpsData(GPSHttpReq) returns (GPSHttpResp) {
        // http option
        //        option (google.api.http) = {
        //            get: "/gps/{uid}"
        //        };
    }

}

message GPSHttpReq {
    int32 uid = 1;
    string imei = 2;
}

message GPSHttpResp {
    int32 uid = 1;
    GPS gpsInfo = 2;
    Wifi wifiInfos = 3;
    Result res = 4;
    Device deviceInfo = 5;
}
// GPS 数据上报
message ReportDataReq {
    //    int32 uid = 1;
    string iMei = 1;
    int32 dataType = 2;   // 1 是GPS... 2 是sos
    Device deviceInfo = 3;
    Location locationInfo = 4;
}

message Device {
    int32 id = 1; // 设备id号
    int32 deviceType = 2; // 设备类型，具体类型待定
    int32 battery = 3; // 设备电量
    int32 current_group = 4; // janus当前组
}

message Location {
    GPS gpsInfo = 1;
    BaseStation bSInfo = 2;
    repeated  Wifi wifiInfo = 3;
    //    BlueTooth btInfo = 4;
    repeated BlueTooth btInfo = 4;
}

message GPS {
    uint64 localTime = 1; // 定位时间 TODO 当地发送数据的即时时间？
    double longitude = 2; // 经度
    double latitude = 3; // 纬度
    float speed = 4; // 速度
    float course = 5; // 航向   TODO
}

message BaseStation {
    int32 country = 1;
    int32 operator = 2;
    int32 lac = 3;
    int32 cid = 4;
    int32 firstBs = 5; // 第一个基站的强度   TODO 类型
    int32 secondBs = 6; // 第二个基站的信号强度
    int32 thirdBs = 7;
    int32 fourthBs = 8;
}

//TODO 待定
message BlueTooth {
    string name = 1;
    string address = 2;
    int32 level = 3;
}

message ReportDataResp {
    Result res = 1;
}
